cabal-version:      2.4
name:               mildew
version:            0.1.0.0
synopsis:           Differential Fuzzing for Parser Combinators

homepage:           https://github.com/OliverMadine/mildew

bug-reports:        https://github.com/OliverMadine/mildew/issues
license:            NONE
author:             Oliver Madine
maintainer:         30090176+OliverMadine@users.noreply.github.com

-- test-suite mildew
executable mildew
    type: exitcode-stdio-1.0
    other-modules: Combinators
    main-is: Main.hs
    build-depends:
        base ^>=4.16.4.0,
        tasty,
        tasty-hunit,
        tasty-quickcheck

    hs-source-dirs: src
    default-language: Haskell2010
